syntax = "proto3";

package pb.login;

enum E_Login_Result
{
	Succ = 0; //成功
    Error_Version = 1; //错误版本
    Not_Allow     = 2; //黑名单
    Error_UserIdData = 3;
    No_GateServer    = 4; 
    GateServer_Full  = 5; //连接数已满
    Http_AuthError    = 6;
    Result_Ban=7; //被禁号
    NotFoundReloginKey = 8; //没有找到reloginkey
    Invalid_ReloginKey = 9; //非法reloginkey
    ReloginKey_Timeout = 10; //reloginkey超时
    No_GameServer	   = 11; //没找到指定的服务器
    Server_Maintance   = 12; //服务器维护中
}

enum E_Kick_Reason
{
	Repeat_Login = 0;
	Ban = 1;
	Seq_Mismatch = 2;
}

enum E_Login_CMD
{
	Login = 0; //玩家登陆，游戏服将登陆数据发给地图服
	Logout = 1; //玩家登出

	KeepAlive = 2; //心跳请求 TS TC
	LoginResp_MS = 3; //登录返回  包含(iggid,gameid)->userid的映射关系 LoginMS2GS
	Kick  = 4; //T掉玩家  S->C message->KickPlayer
	ReLogin = 5; //重连 C->S  message->UserLogin
	ReLoginKey = 6; //重连Key信息。。断线后15分钟内有效？
}

message Base_Cmd
{
	E_Login_CMD cmd  =1;
}

message LoginKeepAlive
{
	int64 server_time = 1;
	uint32 s_seqid  = 2; //最后收到的服务器包序列号
}

message	KickPlayer
{
	E_Kick_Reason reason = 1;
	int64 user_id = 2;
}

message UserLogin
{
	uint32 game_id = 1;			//游戏id
	int64  user_id   = 2;			//玩家id
	string session_key = 3;			//会话key
	E_Login_Result result = 4;			//结果 0成功 非0错误码
	uint32 s_seqid  = 5; //最后收到的服务器包序列号
}

message LoginC2LS {	
	uint32 game_id = 1;			//游戏id
	int64  user_id   = 2;			//玩家id
	string session_key = 3;			//会话key access token
	uint32 version = 4;				//版本
	string ud_id = 5;             //udid
	string sdk_game_id = 6;       //sdk gameid
}

message LoginLS_Resp {	   //L->G  L->Client
	uint32 result = 1;	//结果 0成功 非0错误码
	string dns    = 2;
	string check_out_text = 3;
	string ip      = 4;
	uint32 port    = 5;
	int64 user_id  = 6;
	int64 sdk_gameid = 7;
}

message LoginC2GS
{//客户端-》网关 _MSG_CLIENT_LOGINTOG
	uint32 operator = 1;//<1:Android手Q, 2:Android微信, 3:ios手Q, 4:ios微信
	int64 user_id   = 2;
	string check_out_text = 3;
	string session_key = 4;
	uint32 version = 5;
	uint32 game_id = 6;
	uint32 client_sign = 7;//客户端标识(技术部使用)
	uint32 client_sign2 = 8;//
	uint32 web_flag = 9; //为1表示Web登录
}

message LoginGS2MS
{//游戏服通知其他服务器玩家状态
	string name = 1;
	uint32 gateserver_id = 2; 
	uint32 global_mail_id = 3;
	int64  register_time = 4;
	int64  user_id = 5;
	int64  igg_id = 6;
	uint32 game_id = 7;
	int64  sdk_gameid = 8;
	string state = 9; //国家码
}

message LoginMS2GS
{//map server to gate server login
	int64 igg_id = 1;
	uint32 game_id = 2;
	int64 user_id = 3;
	int32 db_server_id = 4;
	int64 sdk_gameid = 5;
}